2008-07-22  Jb Evain  <jbevain@novell.com>

	* reflection.c (create_dynamic_mono_image): emit the same
	metadata version that SL2 does when creating a SL2 image.

2008-07-21  Mark Probst  <mark.probst@gmail.com>

	* reflection.c (mono_method_get_object): Don't let static RGCTX
	invoke wrappers get into MonoReflectionMethods.

	Backported from trunk.

2008-07-18 Rodrigo Kumpera  <rkumpera@novell.com>

	* object-internals.h:
	* object.c: New mono_runtime_class_init_full function
	that makes throwing the exception optinal.

	* class-internals.h: New exception type MONO_EXCEPTION_OBJECT_SUPPLIED
	for the case where the exception object is supplied.

	Backported from trunk.

2008-07-16  Kornél Pál  <kornelpal@gmail.com>

	* coree.h: Define __ImageBase as _image_base__ on cygwin that fixes build with
	old ld versions.

	Contributed under MIT/X11 license.

2008-07-15  Zoltan Varga  <vargaz@gmail.com>

	* decimal.c (my_g_bit_nth_msf): Implement this directly without calling
	g_bit_nth_msf () since that macro is not implemented in glib.

2008-07-13  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_generic_sharing_enabled): Always disable generic sharing
	on platforms which do not support it.

2008-07-12  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (mono_signature_to_name): Encode sig->hasthis as well.

2008-07-11  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.h
	(MonoDebuggerEvent): Add `MONO_DEBUGGER_EVENT_INTERRUPTION_REQUEST'.

	* mono-debug-debugger.c
	(_mono_debugger_interruption_request): New global volatile variable.
	(mono_debugger_check_interruption): New public function.

	* threads.c
	(mono_thread_current_check_pending_interrupt): Call
	mono_debugger_check_interruption().
	(mono_thread_interruption_checkpoint_request): Likewise.

2008-07-11 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c: Add more type checks for loaded types. Verify the result
	handle from ldtoken.

2008-07-11 Rodrigo Kumpera  <rkumpera@novell.com>
